Ghost Piece Implemented

--- a/src/fko/tetris/ui/TetrisGUI.fxml
+++ b/src/fko/tetris/ui/TetrisGUI.fxml
@@ -48,8 +48,8 @@
                 </Menu>
                   <Menu mnemonicParsing="false" text="Options">
                     <items>
-                        <CheckMenuItem fx:id="peekOption" mnemonicParsing="false" text="Peek" />
-                        <CheckMenuItem fx:id="ghostPieceOption" mnemonicParsing="false" text="Ghost Piece" />
+                        <CheckMenuItem fx:id="peekOption" mnemonicParsing="false" selected="true" text="Peek" />
+                        <CheckMenuItem fx:id="ghostPieceOption" mnemonicParsing="false" selected="true" text="Ghost Piece" />
                     </items>
                   </Menu>
                 <Menu fx:id="menu_help" mnemonicParsing="false" text="?">
