--- a/src/fko/tetris/ui/TetrisGUI.fxml
+++ b/src/fko/tetris/ui/TetrisGUI.fxml
@@ -143,15 +143,15 @@
       </AnchorPane>
    </bottom>
    <center>
-      <Pane fx:id="playfieldPane" maxHeight="600.0" maxWidth="300.0" minHeight="600.0" minWidth="300.0" prefHeight="600.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+      <Pane fx:id="playfieldPane" BorderPane.alignment="CENTER">
          <children>
             <AmbientLight color="CHARTREUSE" layoutX="55.0" layoutY="104.0" lightOn="true" />
          </children></Pane>
    </center>
    <left>
-      <VBox minWidth="200.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: c0c0c0;" BorderPane.alignment="CENTER">
+      <VBox maxWidth="250.0" minWidth="250.0" prefHeight="661.0" prefWidth="250.0" style="-fx-background-color: c0c0c0;" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane fx:id="holdBox" prefHeight="126.0" prefWidth="180.0" style="-fx-background-color: cccccc;">
+            <AnchorPane fx:id="holdBox" prefHeight="125.0" style="-fx-background-color: cccccc;">
                <effect>
                   <InnerShadow />
                </effect>
@@ -159,10 +159,10 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </AnchorPane>
-            <GridPane>
+            <GridPane prefHeight="180.0" prefWidth="230.0" VBox.vgrow="SOMETIMES">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="106.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="85.0" minWidth="10.0" prefWidth="64.0" />
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="40.0" />
+                <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" percentWidth="60.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -222,7 +222,7 @@
    <right>
       <VBox minWidth="160.0" prefHeight="200.0" prefWidth="160.0" style="-fx-background-color: c0c0c0;" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane fx:id="nextQueueBox" prefHeight="370.0" prefWidth="200.0" style="-fx-background-color: cccccc;">
+            <AnchorPane fx:id="nextQueueBox" prefHeight="370.0" style="-fx-background-color: cccccc;">
                <effect>
                   <InnerShadow />
                </effect>
