Implemeted a Bot which saves training data to file

--- a/src/fko/tetris/ui/TetrisGUI.fxml
+++ b/src/fko/tetris/ui/TetrisGUI.fxml
@@ -65,6 +65,7 @@
                            </toggleGroup>
                         </RadioMenuItem>
                         <RadioMenuItem fx:id="lookaheadBotOption" mnemonicParsing="false" onAction="#botChooserAction" text="LookAhead Bot" toggleGroup="$bots" />
+                        <RadioMenuItem fx:id="trainerBotOption" mnemonicParsing="false" onAction="#botChooserAction" text="Trainer Bot" toggleGroup="$bots" />
                     </items>
                   </Menu>
                 <Menu fx:id="menu_help" mnemonicParsing="false" text="?">
